[gd_scene load_steps=2 format=3 uid="uid://cjfxdqr8rqsal"]

[ext_resource type="Script" path="res://Scenes & Scripts/Prefabs/Interface/unit_type_button.gd" id="1_8kikr"]

[node name="UnitTypeButton" type="TextureButton"]
custom_minimum_size = Vector2(100, 65)
offset_right = 100.0
offset_bottom = 25.0
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("1_8kikr")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
